name:                perf-charts
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Daniel Patterson
maintainer:          dbp@dbpmail.net
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >=4.6 && <4.7,
                       diagrams,
                       SVGFonts
  -- hs-source-dirs:
  default-language:    Haskell2010